<resources>
    <string name="app_name">Material Design</string>
    <string name="material_design_intro">Material Design Intro</string>
    <string name="toolbar">toolbar</string>
    <string name="navigation_draw">Navigation Draw</string>
    <string name="my_image">my_image</string>
    <string name="john_doe">john_doe</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="inbox">Inbox</string>
    <string name="starred">Starred</string>
    <string name="sent_mail">Sent Mail</string>
    <string name="drafts">Drafts</string>
    <string name="subheader">SubHeader</string>
    <string name="all_mail">All Mail</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="open_drawer">Open Navigation drawer</string>
    <string name="close_drawer">Close Navigation drawer</string>
    <string name="username">username</string>
    <string name="text_field">Text Field</string>
    <string name="password">password</string>
    <string name="newyork_city">NewYork City</string>
    <string name="collapsing_toolbar">Collapsing Toolbar</string>
    <string name="text_1">text 1</string>
    <string name="test_2">text 2</string>
    <string name="text_3">text 3</string>
    <string name="text_4">text 4</string>
    <string name="text_5">text 5</string>
    <string name="text_6">text 6</string>
    <string name="text_7">text 7</string>
    <string name="swipe_refresh_layout">Swipe Refresh Layout</string>
    <string name="time_picker">Time Picker</string>
    <string name="the_time_you_picked_will_be_shown_here">the time you picked will be shown here.</string>
    <string name="pick_time">PICK TIME</string>
    <string name="date_picker">Date Picker</string>
    <string name="the_date_you_picked_will_be_shown_here">the date you picked will be shown here.</string>
    <string name="pick_date">Pick Date</string>
    <string name="viewpager_image_slide">ViewPager Image Slide</string>
    <string name="android_games">Android Games</string>
    <string name="selection_controls">Selection Controls</string>
    <string name="switch_off_on">Switch OFF/ON</string>
    <string name="checkbox">checkbox</string>
    <string name="radiobutton1">RadioButton1</string>
    <string name="radiobutton2">RadioButton2</string>
</resources>
