<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_toolbar"
        android:text="@string/toolbar"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_navigation_draw"
        android:text="@string/navigation_draw"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_text_field"
        android:text="@string/text_field"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_collapsing_toolbar"
        android:text="@string/collapsing_toolbar"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_swipe_refresh"
        android:text="@string/swipe_refresh_layout"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_time_picker"
        android:text="@string/time_picker"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_date_picker"
        android:text="@string/date_picker"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_viewPager_imageSlide"
        android:text="@string/viewpager_image_slide"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_selection_controls"
        android:text="@string/selection_controls"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>