<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".selectionControls.SelectionControlsActivity">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/switch_id"
        android:layout_margin="16dp"
        android:text="@string/switch_off_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:theme="@style/SwitchTheme"
        android:checked="false"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/checkbox_id"
        android:layout_below="@id/switch_id"
        android:layout_margin="16dp"
        android:text="@string/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        app:theme="@style/CheckBoxTheme" />

    <RadioGroup
        android:id="@+id/radioGroup_id"
        android:layout_below="@id/checkbox_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButton1_id"
            android:text="@string/radiobutton1"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:theme="@style/RadioButtonTheme"/>

        <android.support.v7.widget.AppCompatRadioButton
            android:id="@+id/radioButton2_id"
            android:text="@string/radiobutton2"
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            app:theme="@style/RadioButtonTheme"/>

    </RadioGroup>



</RelativeLayout>